# bevy_jam_7

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  build_wasm.sh  export_adain_onnx.py  export_microast_onnx.py  test_microast_edges.py  test_onnx_models.py  test_pipeline_debug.py  web_index.html
assets/levels/: Untitled.blend  Untitled.glb  cat.blend
assets/models/styles/: candy.onnx  candy.onnx.data  manga.onnx  manga.onnx.data  picasso.onnx  picasso.onnx.data  test_style.onnx  test_style_fixed.onnx
assets/models_backup/: candy.onnx  candy.onnx.data
cubecl-fork/crates/cubecl-wgpu/: Cargo.toml
cubecl-fork/crates/cubecl-wgpu/src/backend/: wgsl.rs
cubecl-fork/crates/cubecl-wgpu/src/compute/: controller.rs  stream.rs
scripts/: preprocess_wasm.py
src/: burn_style_transfer.rs  fever.rs  gpu_bridge.rs  grab.rs  inference_common.rs  interaction.rs  level.rs  lib.rs  main.rs  movable_platform.rs  player.rs  post_process.rs  puzzle_objects.rs  puzzle_state.rs  skybox.rs  style_transfer.rs  tooltip.rs  triggers.rs  world_layer.rs
tests/: compare_backends.rs
tools/: equirect_to_cubemap.py
training/: download_data.sh  export_onnx.py  export_test_model.py  process_video.py  pyproject.toml  run_golden_pipeline.py  run_pipeline.py  verify_bevy_inference.py
training/datasets/: __init__.py  balanced_loader.py  coco.py  golden_datasets.py  video_flow.py
training/models/: __init__.py  base.py  model5.py  model5_seq.py  reconet.py  stytr_micro.py
training/utils/: __init__.py  adain_wrapper.py  losses.py  nnst_wrapper.py  optical_flow.py  transforms.py  vgg16.py  video_io.py
