[package]
name = "fever_dream"
version = "0.1.0"
edition = "2024"

[features]
default = ["style-johnson"]
style-johnson = []
style-adain = []
style-microast = []

[dependencies]
bevy = { version = "0.18", features = ["3d"] }
ort = { version = "2.0.0-rc.11", features = ["download-binaries", "ndarray"] }
ndarray = "0.17"
crossbeam-channel = "0.5"
image = "0.25"
rand = "0.9"
bevy_camera = "0.18"
bevy_skein = "0.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
