[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = ["science"]
description = "WGPU runtime for the CubeCL"
edition = "2024"
keywords = ["gpu", "wgpu", "webgpu", "gpgpu"]
license = "MIT OR Apache-2.0"
name = "cubecl-wgpu"
readme = "README.md"
repository = "https://github.com/tracel-ai/cubecl/tree/main/crates/cubecl-wgpu"
version = "0.9.0"

[features]
default = [
    "cubecl-runtime/default",
    "cubecl-common/default",
    "cubecl-core/default",
]
exclusive-memory-only = ["cubecl-runtime/exclusive-memory-only"]
std = [
    "cubecl-runtime/std",
    "cubecl-common/std",
    "cubecl-core/std",
    "sanitize-filename",
]
# 'msl' and 'spirv' features are exclusive
msl = ["cubecl-cpp/metal"]
profile-tracy = ["tracy-client"]
spirv = ["cubecl-spirv", "ash", "tracel-ash"]

spirv-dump = ["std"]

tracing = [
    "dep:tracing",
    "cubecl-runtime/tracing",
    "cubecl-common/tracing",
    "cubecl-core/tracing",
]

[dependencies]
# Runtime Deps
log = { default-features = false, version = "^0.4.22" }
tracing = { version = "^0.1.43", default-features = false, features = ["attributes"], optional = true }

cubecl-common = { version = "=0.9.0", default-features = false }
cubecl-core = { version = "=0.9.0", default-features = false }
cubecl-ir = { version = "=0.9.0", default-features = false }
cubecl-runtime = { version = "=0.9.0", default-features = false, features = [
    "channel-mutex",
    "std",
] }
derive_more = { version = "2", default-features = false }
half = { version = "2.5", features = ["alloc", "num-traits", "serde"], default-features = false }
sanitize-filename = { version = "0.6", optional = true }
tracy-client = { version = "0.18.0", optional = true }

# SPIR-V
ash = { version = "0.38", optional = true }
cubecl-spirv = { version = "=0.9.0", optional = true }
tracel-ash = { version = "0.38.0", optional = true }

# Metal
cubecl-cpp = { version = "=0.9.0", features = ["metal"], optional = true }

bytemuck = "1.16.1"

async-channel = "2.3"
derive-new = { version = "0.7.0", default-features = false }
hashbrown = "0.15.5"

cfg-if = "1.0.0"

## wgpu 27 — patched to match Bevy 0.18
[target.'cfg(not(target_os = "macos"))'.dependencies]
wgpu = { version = "27.0.0", features = ["fragile-send-sync-non-atomic-wasm"] }

[target.'cfg(target_os = "macos")'.dependencies]
wgpu = { version = "27.0.0", features = [
    "vulkan-portability",
    "fragile-send-sync-non-atomic-wasm",
] }

[build-dependencies]
cfg_aliases = "0.2.1"
